# financial-intelligence-platform

./: .gitignore  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: b0c82e6798a9_initial_schema.py
api/dependencies/: db.py
api/routes/: document_routes.py  health.py  queries.py
api/schemas/: query.py
core/config/: settings.py
db/postgres/: database.py  models.py  session.py
db/qdrant/: client.py  collections.py  metrics.py  queries.py  snapshots.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
scripts/: check_ocr.py  cleanup_test_data.py  create_qdrant_snapshot.py  create_tables.py  evaluate.py  inspect_document.py  list_qdrant_snapshots.py  run_worker.py  store_chunks.py  test_chunker.py  test_parser.py
services/chunking/: chunk_repository.py
services/citations/: builder.py
services/embeddings/: client.py  generator.py
services/evaluation/: cost.py  hallucination.py  metrics.py  runner.py
services/generation/: client.py  generator.py  prompt_builder.py
services/ingestion/: service.py
services/reranking/: reranker.py
services/retrieval/: ask.py  bm25_search.py  dense_search.py  hybrid_search.py  query_enhancer.py
src/financial_intelligence_platform/: main.py
storage/uploads/: 41f665d7-1e88-4a82-957e-9c8802b583d9.doc  dfed5c12-eccd-4a07-a6ed-7af1b541db61.xlsx
tests/: conftest.py  test_health.py
tests/evaluation/: test_runner.py
tests/integration/: test_ask.py  test_citations.py  test_document_processing.py  (+4 more)
workers/: celery_app.py
(+70 files in other folders)
